2006-08-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_grid_cairo):
	- change the color of the grid slightly
	- speed up the grid by filling all pixel at the same time.

	* engines/industrial/src/industrial_style.c: (real_draw_box),
	(draw_extension):
	- make some colors relative, fix "in" gradient for buttons

2006-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c:
	(draw_rounded_gradient), (draw_rounded_rect), (draw_grid_cairo),
	(real_draw_box), (draw_focus):

	small speed improvements all over the place:
	- draw_rounded_rect is now fixed and has some special cases.
	- the border color of default buttons is special cased instead
	  of relying on transparency.
	- draw grid draws 5 pixel instead of an arc.

2006-08-18  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/hc/src/hc-style.c: (hc_draw_expander):
	* engines/hc/src/hc_gtk2_drawing.h:
	* engines/hc/src/hc_gtk2_engine.c: (hc_style_class_init):

	- Use the base/text values for expander arrow

2006-08-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c:
	(draw_rounded_gradient), (draw_rounded_rect), (real_draw_box),
	(draw_box), (draw_option):
	- add a slight shadow to the radiobutton
	- change in draw_rounded_gradient to prevent blank pixel
	in the corners of buttons.
	- fixed menuitem border opacity
	- small cleanup

	* themes/Industrial/gtk-2.0/gtkrc:
	- Tweak the WnckTasklist glowing
	- cleanups

2006-08-18  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/hc/src/hc-style.c: (hc_draw_check):

	- Improve Visibility/Contrast of Checks, Still not right, but better

2006-08-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_slider),
	(draw_check):
	- added shadow to checkbutton

	* themes/Industrial/gtk-2.0/gtkrc:
	- enable trough-side-details
	- activate sliders
	- set x/ythickness of GtkProgress to 0px