@@ -132,7 +132,8 @@ clearlooks_scrollbar_visible_steppers (GtkWidget *widget)
 {
 	ClearlooksStepper steppers = 0;
 	
-	g_return_val_if_fail (IS_RANGE (widget), CL_STEPPER_UNKNOWN);
+	if (!IS_RANGE (widget))
+		return 0;
 	
 	if (GTK_RANGE (widget)->has_stepper_a)
 		steppers |= CL_STEPPER_A;
@@ -155,7 +156,8 @@ clearlooks_scrollbar_get_junction (GtkWidget    *widget)
 	GtkAdjustment *adj;
 	ClearlooksJunction junction = CL_JUNCTION_NONE;
 	
-	g_return_val_if_fail (IS_RANGE (widget), CL_JUNCTION_NONE);
+	if (!IS_RANGE (widget))
+		return CL_JUNCTION_NONE;
 
 	adj = GTK_RANGE (widget)->adjustment;
 	
